[project]
name = "zoom-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.57.0",
]

[tool.ruff]
line-length = 120
exclude = ["debug", "mock_server"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ARG", "PIE", "T20", "Q", "RUF"]
ignore = ["T201", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
exclude = ["debug", "mock_server"]

[[tool.mypy.overrides]]
module = ["playwright", "playwright.*"]
ignore_missing_imports = true
